--- a/group.css
+++ b/group.css
@@ -60,7 +60,7 @@
     padding:5px;
 }
 
-#addmember, #createuseraddtogroup, #editgroup, #deletegroup {
+#addmember, #createuseraddtogroup, #editgroup, #deletegroup, #create-inputs-feeds {
     display:none;
     float:right;
     cursor:pointer;
