--- a/group.css
+++ b/group.css
@@ -92,3 +92,55 @@
 input:disabled+span{
     opacity: 0.4;
 }
+
+#userlist-table th.userlistactions{
+    padding:0;
+    width:20px;
+}
+
+#userlist-div{  
+    font-weight:normal;
+    padding:10px;
+    font-weight:bold;
+    cursor:pointer;
+}
+
+#userlist-div .user-info{  
+    background-color:#c1c1c1;
+    border-bottom:1px solid #fff;
+    border-left:2px solid #f0f0f0;
+    cursor:pointer;
+    padding:10px; 
+}
+
+#userlist-div .user-info:hover{ border-left:2px solid #44b3e2; }
+
+.user{
+    margin:4px;
+}
+.user-feedslist{
+    background-color:#ddd;
+}
+
+.feed{
+    padding:10px
+}
+
+.feed-value, .feed-time{
+    width:60px;
+    padding-top:10px;
+    float:right;
+    text-align:center;
+}
+
+.feed input {
+    width:20px;
+    padding: 10px;
+    display:inline-block;
+    text-align:center;
+}
+
+.feed .feed-name {
+    display:inline-block;
+    padding-left:10px
+}
