--- a/group.css
+++ b/group.css
@@ -138,6 +138,7 @@ input:disabled+span{
     border-top: 1px solid #ccc;
     border-left: 1px solid #ccc;
     border-right: 1px solid #ccc;
+    cursor:default
 }
 
 .feed:last-child, .task:last-child  {
