Minor usability improvements to UI
Use <button> tags for larger and more obvious clickable areas,
Add <label> tags around the label text of checkboxes
Centre users vertically within their box
Make checkboxes bigger
Right align user actions

--- a/group.css
+++ b/group.css
@@ -63,8 +63,7 @@
 #addmember, #createuseraddtogroup, #editgroup, #deletegroup, #create-inputs-feeds {
     display:none;
     float:right;
-    cursor:pointer;
-    margin-left: 20px
+    margin-left: 10px
 }
 
 #groupcreate {
@@ -107,7 +106,6 @@ input:disabled+span{
 #userlist-div .user-info{
     font-weight:normal;
     cursor:pointer;
-    padding:10px 10px 0; 
 }
 
 
@@ -117,14 +115,28 @@ input:disabled+span{
     border-left: 1px solid #ccc;
     border-right: 1px solid #ccc;
     background-color:white;
+
+    padding: 5px 10px;
 }
+
+/* .user:nth-child(2) {
+    background-color: #f4f4f4;
+} */
+
 
 .user:last-child {
     border-bottom: 1px solid #ccc;
 }
 
 .user-feedslist{
-    padding:5px;
+    margin-left: -5px;
+}
+
+.user-feedslist input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+    margin: 0;
+    margin-right: 10px;
 }
 
 .user-tasks{
@@ -164,6 +176,7 @@ input:disabled+span{
 .feed .feed-name, .task .task-name {
     display:inline-block;
     padding-left:10px
+
 }
 
 .user-name, .user-role, .user-active-feeds{
@@ -179,10 +192,15 @@ input:disabled+span{
 }
 
 .user-actions{
-    width:16%;
+    width:19%;
     display:inline-block;
     text-align:right;
     box-sizing:border-box
+}
+
+.user-actions button {
+    padding: 0 5px;
+    margin: 0 3px 0;
 }
 
 .table-headers{
@@ -193,10 +211,6 @@ input:disabled+span{
 
 .table-headers .user-name{
     padding-left:10px;
-}
-
-.user-actions i{
-    padding-left:5px;
 }
 
 .matched-tag:hover{
@@ -263,7 +277,7 @@ input:disabled+span{
 
 .user-feedslist-inner > div, .user-taskslist-inner > div {
     background-color:#ddd;
-    padding:10px 10px 5px;
+    padding: 5px;
     margin:2px
 }
 
