--- a/group.css
+++ b/group.css
@@ -297,7 +297,7 @@ input.feed-tag-checkbox{
     display:inline-block;
     box-sizing: border-box;
 }
- .user-taskslist-inner > div {
+.user-taskslist-inner > div {
     background-color:#c6c6c6;
 }
 
@@ -316,15 +316,23 @@ input.feed-tag-checkbox{
     margin: 0 15px
 }
 .task-enabled{
-min-width:10px;
-width:6%;
-    }
+    min-width:10px;
+    width:6%;
+}
 
 #task-actions{
     width:10%;
     text-align:right
 }
 #task-actions div{
-   margin:0 5px;
+    margin:0 5px;
 }
 
+.email-div{
+    padding: 0 50px 25px;
+}
+.email-div textarea{
+    display:block;
+    width: 100%;
+    height:100px
+}
